--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 dnl Transmission Suite
 
-AC_INIT([TransmissionSuite],[master])
+AC_INIT([TransmissionSuite],[master],,[txsuite])
 AM_INIT_AUTOMAKE([foreign])
 AM_MAINTAINER_MODE
 
@@ -8,10 +8,14 @@ AC_PROG_CC
 AM_PROG_LEX
 AC_PROG_YACC
 
+examplesdir='${datarootdir}/examples/${PACKAGE_TARNAME}'
+AC_SUBST([examplesdir])
+
 AC_CONFIG_FILES([
 Makefile
 buildtools/Makefile
 mhegc/Makefile
+mhegc/helloworld/Makefile
 ])
 
 AC_OUTPUT
