--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Transmission Suite
 
-DIST_SUBDIRS = buildtools mhegc dss tsdemux
+DIST_SUBDIRS = buildtools mhegc dss tsdemux png2rgb
 
 if BUILD_MHEGC
 MHEGC_SUBDIRS = mhegc
@@ -14,6 +14,14 @@ if BUILD_TSDEMUX
 TSDEMUX_SUBDIRS = tsdemux
 endif
 
-SUBDIRS = ${MHEGC_SUBDIRS} ${DSS_SUBDIRS} ${TSDEMUX_SUBDIRS}
+if BUILD_PNG2RGB
+PNG2RGB_SUBDIRS = png2rgb
+endif
+
+SUBDIRS = \
+	${MHEGC_SUBDIRS} \
+	${DSS_SUBDIRS} \
+	${TSDEMUX_SUBDIRS} \
+	${PNG2RGB_SUBDIRS}
 
 
