--- a/png2rgb/Makefile.am
+++ b/png2rgb/Makefile.am
@@ -2,4 +2,8 @@
 
 bin_PROGRAMS = png2rgb
 
+png2rgb_CPPFLAGS = ${LIBPNG_CPPFLAGS}
+png2rgb_CFLAGS = ${LIBPNG_CFLAGS}
+png2rgb_LDFLAGS = ${LIBPNG_LDFLAGS}
+png2rgb_LDADD = ${LIBPNG_LIBS}
 png2rgb_SOURCES = png2rgb.c
