Simplify configure script, add sub-projects.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Transmission Suite
 
-DIST_SUBDIRS = buildtools mhegc dss tsdemux png2rgb
+DIST_SUBDIRS = buildtools mhegc dss tsdemux png2rgb mpeg4ip shroedinger
 
 if BUILD_MHEGC
 MHEGC_SUBDIRS = mhegc
@@ -18,10 +18,25 @@ if BUILD_PNG2RGB
 PNG2RGB_SUBDIRS = png2rgb
 endif
 
+if BUILD_TSTOOLS
+TSTOOLS_SUBDIRS = tstools
+endif
+
+if BUILD_MPEG4IP
+MPEG4IP_SUBDIRS = mpeg4ip
+endif
+
+if BUILD_SHROEDINGER
+SHROEDINGER_SUBDIRS = shroedinger
+endif
+
 SUBDIRS = \
 	${MHEGC_SUBDIRS} \
 	${DSS_SUBDIRS} \
 	${TSDEMUX_SUBDIRS} \
-	${PNG2RGB_SUBDIRS}
+	${PNG2RGB_SUBDIRS} \
+	${TSTOOLS_SUBDIRS} \
+	${MPEG4IP_SUBDIRS} \
+	${SHROEDINGER_SUBDIRS}
 
 
