--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "ffmpeg"]
 	path = ffmpeg
 	url = git://git.ffmpeg.org/ffmpeg/
+[submodule "x264"]
+	path = x264
+	url = git://git.videolan.org/x264.git
