--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule "x264"]
 	path = x264
 	url = git://git.videolan.org/x264.git
+[submodule "flvstreamer"]
+	path = flvstreamer
+	url = git://github.com/nevali/flvstreamer.git
+[submodule "libswscale"]
+	path = libswscale
+	url = git://git.ffmpeg.org/libswscale/
