--- a/autogen.rc
+++ b/autogen.rc
@@ -1,7 +1,12 @@
 SUBDIRS='dss tsdemux libpng png2rgb tstools mpeg4ip liboil schroedinger'
-PATCHES='liboil:liboil-configure.ac libpng:libpng-configure.ac'
+PATCHES='liboil:liboil-configure.ac libpng:libpng-configure.ac SDL:SDL-configure.in SDL:SDL-configure'
 
 if test -d libpng ; then
 	rm -f libpng/libpng-uninstalled.pc.in
 	cp files/libpng-uninstalled.pc.in libpng/
+fi
+
+if test -d SDL ; then
+	rm -f SDL/sdl-uninstalled.pc.in
+	cp files/sdl-uninstalled.pc.in SDL/
 fi
