--- a/files/sdl-uninstalled.pc.in
+++ b/files/sdl-uninstalled.pc.in
@@ -2,8 +2,8 @@
 
 prefix=
 exec_prefix=
-libdir=${pcdir}/build
-includedir=${pcdir}/include
+libdir=${pcfiledir}/build
+includedir=${pcfiledir}/include
 
 Name: sdl-@SDL_VERSION@ uninstalled
 Description: Simple DirectMedia Layer is a cross-platform multimedia library designed to provide low level access to audio, keyboard, mouse, joystick, 3D hardware via OpenGL, and 2D video framebuffer.
