Build x264 (use --with-included-x264 for the time being)

--- a/configure.ac
+++ b/configure.ac
@@ -73,6 +73,7 @@ TX_BUILD_SUBPROJ(libpng)
 TX_BUILD_SUBPROJ(png2rgb)
 TX_BUILD_SUBPROJ(SDL)
 TX_BUILD_SUBPROJ(mpeg4ip)
+TX_BUILD_SUBPROJ(x264)
 
 export PKG_CONFIG_PATH
 
