--- a/autogen.rc
+++ b/autogen.rc
@@ -1,5 +1,5 @@
 SUBDIRS='dss tsdemux libpng png2rgb tstools mpeg4ip liboil schroedinger'
-PATCHES='liboil:liboil-configure.ac libpng:libpng-configure.ac SDL:SDL-configure.in SDL:SDL-configure'
+PATCHES='liboil:liboil-configure.ac libpng:libpng-configure.ac SDL:SDL-configure.in SDL:SDL-configure schroedinger:schroedinger-configure.ac'
 
 if test -d libpng ; then
 	rm -f libpng/libpng-uninstalled.pc.in
