Patch schroedinger-tools to use libtool.

--- a/autogen.rc
+++ b/autogen.rc
@@ -1,5 +1,5 @@
-SUBDIRS='dss tsdemux libpng png2rgb tstools mpeg4ip liboil schroedinger'
-PATCHES='liboil:liboil-configure.ac libpng:libpng-configure.ac SDL:SDL-configure.in SDL:SDL-configure schroedinger:schroedinger-configure.ac vorbis-tools:vorbis-tools-configure.ac vorbis-tools:vorbis-tools-configure'
+SUBDIRS='dss tsdemux libpng png2rgb tstools mpeg4ip liboil schroedinger schroedinger-tools'
+PATCHES='liboil:liboil-configure.ac libpng:libpng-configure.ac SDL:SDL-configure.in SDL:SDL-configure schroedinger:schroedinger-configure.ac vorbis-tools:vorbis-tools-configure.ac vorbis-tools:vorbis-tools-configure schroedinger-tools:schroedinger-tools-configure.ac'
 
 if test -d libpng ; then
 	rm -f libpng/libpng-uninstalled.pc.in
