Allow NO_RECURSE environment variable to control whether AC_CONFIG_SUBDIRS() is called.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,4 +3,4 @@
 DIST_SUBDIRS = buildtools mhegc dss tsdemux libpng png2rgb mpeg4ip \
 	liboil schroedinger
 
-SUBDIRS = @subdirs@
+SUBDIRS = @subdirs@ @extra_subdirs@
