Correct mhegc/mhegenc options.

--- a/configure.ac
+++ b/configure.ac
@@ -22,8 +22,8 @@ TX_ENABLE_SUBDIR(tsdemux, AS_HELP_STRING([--enable-tsdemux],[don't build the tsd
 TX_ENABLE_SUBDIR(png2rgb, AS_HELP_STRING([--disable-png2rgb],[don't build the png2rgb utility]))
 TX_ENABLE_SUBDIR(tstools, AS_HELP_STRING([--disable-tstools],[don't build the Transport Stream Tools]))
 TX_ENABLE_SUBDIR(mpeg4ip, AS_HELP_STRING([--disable-mpeg4ip],[don't build the MPEG4IP suite]))
-TX_ENABLE_SUBDIR(mhegc, AS_HELP_STRING([--disable-mhegc],[don't build the RedButton MHEG compiler/decompiler]),no)
-TX_ENABLE_SUBDIR(mhegenc, AS_HELP_STRING([--enable-mhegc],[build the SpongeLava MHEG compiler/decompiler]),no)
+TX_ENABLE_SUBDIR(mhegc, AS_HELP_STRING([--enable-mhegc],[build the RedButton MHEG compiler/decompiler]),no)
+TX_ENABLE_SUBDIR(mhegenc, AS_HELP_STRING([--enable-mhegenc],[build the SpongeLava MHEG compiler/decompiler]),no)
 TX_ENABLE_SUBDIR(schroedinger-tools, AS_HELP_STRING([--disable-vorbis-tools],[don't build the Ogg Vorbis command-line tools]))
 TX_ENABLE_SUBDIR(vorbis-tools, AS_HELP_STRING([--disable-vorbis-tools],[don't build the Ogg Vorbis command-line tools]))
 TX_ENABLE_SUBDIR(ffmpeg, AS_HELP_STRING([--disable-ffmpeg],[don't build FFmpeg]))
