Ignore built OpenCaster tools.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,33 @@ compile
 /libvorbis
 /libtheora
 /vorbis-tools
+*.d
+/opencaster/libs/dvbobjects/build
+/opencaster/tools/esaudio2pes/esaudio2pes
+/opencaster/tools/esaudioinfo/esaudioinfo
+/opencaster/tools/esvideo2pes/esvideo2pes
+/opencaster/tools/esvideoinfo/esaudioinfo
+/opencaster/tools/i13942ts/i13942ts
+/opencaster/tools/ip2sec/ip2sec
+/opencaster/tools/pes2es/pes2es
+/opencaster/tools/pesaudio2ts/pesaudio2ts
+/opencaster/tools/pesinfo/pesinfo
+/opencaster/tools/pesvideo2ts/pesvideo2ts
+/opencaster/tools/sec2ts/sec2ts
+/opencaster/tools/ts2pes/ts2pes
+/opencaster/tools/tscbrmuxer/tscbrmuxer
+/opencaster/tools/esvideoinfo/esvideoinfo
+/opencaster/tools/tscrypt/tscrypt
+/opencaster/tools/tsfilter/tsfilter
+/opencaster/tools/tsloop/tsloop
+/opencaster/tools/tsmodder/tsmodder
+/opencaster/tools/tsnullfiller/tsnullfiller
+/opencaster/tools/tsnullshaper/tsnullshaper
+/opencaster/tools/tspcrmeasure/tspcrmeasure
+/opencaster/tools/tspidmapper/tspidmapper
+/opencaster/tools/tsstamp/tsstamp
+/opencaster/tools/tstdt/tstdt
+/opencaster/tools/tsvbr2cbr/tsvbr2cbr
+/opencaster/tools/vbv/vbv
+/opencaster/tools/zpipe/zpipe
+
