--- a/patches/schroedinger-tools-configure.ac
+++ b/patches/schroedinger-tools-configure.ac
@@ -1,8 +1,6 @@
-diff --git a/configure.ac b/configure.ac
-index 2f7a6d2..b987676 100644
---- a/configure.ac
-+++ b/configure.ac
-@@ -4,6 +4,8 @@ AC_CONFIG_HEADERS(config.h)
+--- a/configure.ac	Thu Feb 18 22:46:02 2010
++++ b/configure.ac	Thu Feb 18 22:46:56 2010
+@@ -4,6 +4,8 @@
  
  AM_INIT_AUTOMAKE(1.6)
  
@@ -11,3 +9,13 @@ index 2f7a6d2..b987676 100644
  AC_PROG_CXX
  
  ACLOCAL_AMFLAGS="-I m4 $ACLOCAL_AMFLAGS"
+@@ -18,6 +20,9 @@
+ SCHRO_VER="1.0"
+ PKG_CHECK_MODULES(SCHROEDINGER, schroedinger-1.0 >= $SCHRO_VER, HAVE_SCHRO=yes, HAVE_SCHRO=no)
+ if test "x${HAVE_SCHRO}" != xyes ; then
++	PKG_CHECK_MODULES(SCHROEDINGER, schroedinger >= $SCHRO_VER, HAVE_SCHRO=yes, HAVE_SCHRO=no)
++fi
++if test "x${HAVE_SCHRO}" != xyes ; then
+ 	AC_MSG_ERROR([schroedinger-1.0 >= $SCHRO_VER is required])
+ fi
+ 
